--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
+    "@rxweb/reactive-form-validators": "^1.1.2-beta.2",
     "angular-calendar": "^0.28.28",
     "class-transformer": "^0.4.0",
     "date-fns": "^2.16.1",
