--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "angular-calendar": "^0.28.28",
     "class-transformer": "^0.4.0",
     "date-fns": "^2.16.1",
+    "ng-gallery": "^6.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.7",
-    "swiper": "^7.3.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
