--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~13.1.1",
     "@rxweb/reactive-form-validators": "^1.1.2-beta.2",
     "angular-calendar": "^0.28.28",
+    "angular-jwt": "^0.1.11",
     "class-transformer": "^0.4.0",
     "date-fns": "^2.16.1",
     "ng-gallery": "^6.0.0",
