--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "~13.1.1",
     "@angular/platform-browser-dynamic": "~13.1.1",
     "@angular/router": "~13.1.1",
+    "@auth0/angular-jwt": "^5.0.2",
     "@rxweb/reactive-form-validators": "^1.1.2-beta.2",
     "angular-calendar": "^0.28.28",
-    "angular-jwt": "^0.1.11",
     "class-transformer": "^0.4.0",
     "date-fns": "^2.16.1",
     "ng-gallery": "^6.0.0",
